--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,16 +81,20 @@ body {
     background-color: #494040; /* 배경색은 사이트 디자인에 맞게 조정 */
   }
   
-  .blog-name {
-    color: #fff; /* 글자색은 사이트 디자인에 맞게 조정 */
-    font-size: 40px; /* 폰트 크기는 취향에 맞게 조정 */
-    text-decoration: none; /* 밑줄 제거 */
-  }
+.blog-name {
+  color: #fff; /* 글자색은 사이트 디자인에 맞게 조정 */
+  font-size: 40px; /* 폰트 크기는 취향에 맞게 조정 */
+  text-decoration: none; /* 밑줄 제거 */
+}
+
   
 .container {
     max-width: 1200px; /* 최대 너비 설정 */
     margin: 0 auto; /* 중앙 정렬 */
     padding: 0 15px; /* 좌우 패딩 */
+}
+.container a:hover{
+  color: #c8d1db;
 }
 
 .site-header hr {
