--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,9 +13,8 @@
     
     <!-- 사이드바 카테고리 목록 -->
     <div class="sidebar-categories">
-        {% assign categories = site.categories | sort %}
-        {% for category in categories %}
-        <a href="javascript:void(0);" onclick="filterPostsByCategory('{{ category[0] }}')">{{ category[0] }}</a>
+        {% for category in site.categories %}
+        <a href="/category/{{ category[0] | slugify }}/">{{ category[0] }}</a>
         {% endfor %}
     </div>
 </div>
