--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
             
             <p>카테고리 수: {{ site.categories.size }}</p>
             {% for category in site.categories %}
-            <li><a href="{{ '/category-' | append: category[0] | slugify }}">{{ category[0] }}</a></li>
+            <li><a href="/category/{{ category[0] }}">{{ category[0] }}</a></li>
             {% endfor %}
         </ul>
         
