--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="post-box">
   <div class="post-header">
     <h1>{{ page.title }}</h1>
     <p class="post-date">{{ page.date | date: "%b %-d, %Y" }}</p>
